--- a/styles/components/microblog.css
+++ b/styles/components/microblog.css
@@ -162,6 +162,7 @@
     display: flex;
     flex-direction: column;
     max-height: calc(100vh - 6rem);
+    padding-top: 0.5rem;
     overflow: hidden;
 }
 
